Added Google Auth

--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "googleapis": "^84.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.5",
+    "query-string": "^7.0.1",
     "validator": "^13.6.0"
   },
   "devDependencies": {
