--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "validator": "^13.6.0"
   },
   "devDependencies": {
-    "env-cmd": "^10.1.0"
+    "env-cmd": "^10.1.0",
+    "faker": "^5.5.3"
   },
   "scripts": {
     "start": "env-cmd -f ./config/dev.env node index.js",
